# YoutubeDownloader

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  THIRD-PARTY-NOTICES.md
.codegraph/: daemon.pid
docs/: post-processing-design.md  pr-1-triage.md
docs/superpowers/plans/: 2026-06-24-reliability-cleanup.md
docs/superpowers/specs/: 2026-06-22-settings-about-button-layout-design.md  2026-06-22-ui-behavior-fixes-design.md  2026-06-24-reliability-cleanup-design.md  2026-06-25-ux-refresh-design.md
src/: Application.cpp  Application.h  DialogWindows.cpp  YtDlpClient.h
src/Core/: AppPaths.cpp  AppPaths.h  AppVersion.h  BackendText.cpp  BackendText.h  Config.cpp  Config.h  DownloadQueue.cpp  DownloadQueue.h  DownloadQueueStore.cpp  DownloadQueueStore.h  FileOperations.cpp  FileOperations.h  KeyboardShortcuts.cpp  KeyboardShortcuts.h  Localization.cpp  Localization.h  Logger.cpp  PostProcessingFileOps.cpp  PostProcessingFileOps.h  ToolManagers.cpp  ToolManagers.h  TranscriptionClient.cpp  TranscriptionClient.h  VoiceOverTranslationClient.cpp  VoiceOverTranslationClient.h  YtDlpClient.cpp  YtDlpClient.h
src/UI/: Application.cpp  Application.h  DialogWindows.cpp  DialogWindows.h  UiActions.cpp  UiActions.h  UiRenderer.cpp  UiRenderer.h  resource.rc
stuff/languages/: README.md  en.json
tests/: test_core.cpp
